mysqlservice.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysqlservice
  name: mysqlservice
  namespace: newdev
spec:
  clusterIP: None
  ports:
  - name: 3306-3306
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
status:
  loadBalancer: {}
  ########################################################

# apiVersion: v1
# kind: Service
# metadata:
#   name: mysql-read
#   namespace: newdev
#   labels:
#     app: mysql
# spec:
#   ports:
#   - name: mysql
#     port: 3306
#     protocol: TCP
#     targetPort: 3306
#   selector:
#     app: mysql
