phpclusterservice.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-02-20T23:13:32Z"
  labels:
    app: phpdeploy
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl.exe
    operation: Update
    time: "2021-02-20T23:13:32Z"
  name: phpclusterservice
  namespace: newdev
  resourceVersion: "562257"
  selfLink: /api/v1/namespaces/newdev/services/phpclusterservice
  uid: ac022fd7-ff64-40dc-a4cc-5863a05714e0
spec:
  clusterIP: 10.1.0.5
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: phpdeploy
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
