phpservice.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-02-19T15:08:39Z"
  labels:
    app: phpdeploy
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:externalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl.exe
    operation: Update
    time: "2021-02-19T15:08:39Z"
  name: phpdeploy
  namespace: newdev
  resourceVersion: "272177"
  selfLink: /api/v1/namespaces/newdev/services/phpdeploy
  uid: b0240597-9956-46cc-8747-32e55ef9c516
spec:
  clusterIP: 10.1.0.123
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31506
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: phpdeploy
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
