ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: newdev
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - example.com
    secretName: aks-ingress-tls
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: phpclusterservice
          servicePort: 80
